--- a/css/styles.css
+++ b/css/styles.css
@@ -20,12 +20,12 @@ img {
     display: block
 }
 .container {
-    width: 1158px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
+    align-items: center;
+        display: flex;
+        width: 1158px;
+        margin: 0 auto;
+        padding: 0 15px;
+    }
 .section {
     padding-top: 120px;
     padding-bottom: 120px;
