--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 body {
-    font-family: 'Roboto', sans-serif;
-    color: #434455;
-    text-decoration: none;
-    background-color: #ffffff;
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  text-decoration: none;
+  background-color: #ffffff;
 }
 
 h1,
@@ -13,276 +13,275 @@ h5,
 h6,
 p,
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 img {
-    display: block
+  display: block;
 }
 .container {
-    align-items: center;
-        display: flex;
-        width: 1158px;
-        margin: 0 auto;
-        padding: 0 15px;
-    }
+  align-items: center;
+  display: flex;
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
 .section {
-    padding-top: 120px;
-    padding-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 ul,
 ol {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .site-header {
-    border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .container-header {
-    align-items: center;
-    display: flex;
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
+  align-items: center;
+  display: flex;
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 .main-navigation {
-    align-items: center;
-    display: flex;
+  align-items: center;
+  display: flex;
 }
 .ul-navigation {
-    display: flex;
-    gap: 40px;
-    margin-right: 40px
+  display: flex;
+  gap: 40px;
+  margin-right: 40px;
 }
 .li-navigation1 {
-    margin-right: 40px
+  margin-right: 40px;
 }
 .li-navigation2 {
-    margin-right: 40px
+  margin-right: 40px;
 }
 .li-navigation3 {
-margin-right: 0px
+  margin-right: 0px;
 }
 .logo {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 0.03em;
-    color: #4D5AE5;
-    margin-right: 76px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 0.03em;
+  color: #4d5ae5;
+  margin-right: 76px;
 }
 
 .logo span {
-    color: #2E2F42;   
+  color: #2e2f42;
 }
 .navigation {
-    color: #2E2F42;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: 0.02em;
-    line-height: 1.5;
-    text-decoration: none;
-    padding: 24px 0;
-
+  color: #2e2f42;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.02em;
+  line-height: 1.5;
+  text-decoration: none;
+  padding: 24px 0;
 }
 
 .navigation:hover,
 .navigation:focus {
-    color: #404bbf;
-    outline: none;
+  color: #404bbf;
+  outline: none;
 }
 
 .address-nav {
-    font-style: normal;
+  font-style: normal;
 }
 .address-mailtel {
-    color: #434455;
-    letter-spacing: 0.02em;
-    line-height: 1.5;
-    text-decoration: none;
+  color: #434455;
+  letter-spacing: 0.02em;
+  line-height: 1.5;
+  text-decoration: none;
 }
 
 .address-mailtel:hover,
 .address-mailtel:focus {
-    color: #404bbf;
-    outline: none;
+  color: #404bbf;
+  outline: none;
 }
 
 .ul-address {
-    display: flex;
-    gap: 40px;
+  display: flex;
+  gap: 40px;
 }
 
 .li-address1 {
-    margin-right: 40px;
+  margin-right: 40px;
 }
 .li-address2 {
-    margin-right: 0px;
+  margin-right: 0px;
 }
-
 
 .hero {
-    background-color: #2E2F42;
-    text-align: center;
-    padding: 188px 0;
+  background-color: #2e2f42;
+  text-align: center;
+  padding: 188px 0;
 }
 .main-title {
-    color: #ffffff;
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    max-width: 496px;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  max-width: 496px;
 }
 .main-button {
-    cursor: pointer;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    background-color: #4D5AE5;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    display: block;
-    min-width: 169px;
-    height: 56px;
-    border: none;
-    border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  background-color: #4d5ae5;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
 }
 .main-button:hover,
 .main-button:focus {
-    background-color: #404BBF
+  background-color: #404bbf;
 }
 .advantage {
-    padding: 120px 0;
+  padding: 120px 0;
 }
 .advantage-main {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 .ul-advantage {
-    display: flex;
-    gap: 24px;
+  display: flex;
+  gap: 24px;
 }
 .li-advantage {
-    width: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 .advantage-titles {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    color: #2e2f42;
-    letter-spacing: 0.02em;
-    margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  color: #2e2f42;
+  letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 .advantage-paragraphs {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 .team {
-    background-color: #F4F4FD;
-    padding: 120px 0;
+  background-color: #f4f4fd;
+  padding: 120px 0;
 }
-
 
 .team-title {
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    font-weight: 700;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    text-transform: capitalize;
-    margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  font-weight: 700;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .ul-team {
-    display: flex;
-    gap: 24px;
+  display: flex;
+  gap: 24px;
 }
-.ul-team1 {
-    background-color: #FFFFFF;
-    margin-right: 24px;
+.li-team {
+  margin-right: 24px;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
-.ul-team2 {
-    margin-right: 24px;
-}
-
-.ul-team3 {
-    margin-right: 24px;
-}
-.ul-team4 {
-    margin-right: 0px;
+.div-team {
+  padding: 32px 0;
 }
 .team-name {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    color: #2e2f42;
-    letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 8px;
 }
 .team-profession {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+  text-align: center;
+}
+
+.team-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  color: #2e2f42;
+  letter-spacing: 0.02em;
+}
+.team-profession {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 .portfolio-title {
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    font-weight: 700;
-    color: #2e2f42;
-    letter-spacing: 0.02em;
-    text-transform: capitalize
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  font-weight: 700;
+  color: #2e2f42;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
 .portfolio-name {
-    font-weight: 500;
-    font-size: 20px;
-    color: #2e2f42;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
+  font-weight: 500;
+  font-size: 20px;
+  color: #2e2f42;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 .portfolio-paragraphs {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .footer-content {
-    background-color: #2E2F42;
+  background-color: #2e2f42;
 }
 .footer-logo {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 0.03em;
-    color: #4D5AE5;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 0.03em;
+  color: #4d5ae5;
 }
 
 .footer-logo-span {
-    color: #f4f4fd;
+  color: #f4f4fd;
 }
 
 .footer-paragraph {
-    color: #F4F4FD;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
