--- a/css/styles.css
+++ b/css/styles.css
@@ -234,7 +234,7 @@ ul {
   gap: 24px;
 }
 
-.team-members-li {
+.team-li {
   flex-basis: calc((100% - 3 * 24px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
